crates/btpc-core/tests/ui/private_error_module.rs
use btpc_core::error::Error;

fn main() {
    let _ = std::mem::size_of::<Error>();
}
